Fixed word overflow on languages span

--- a/countryPage/country.scss
+++ b/countryPage/country.scss
@@ -89,6 +89,8 @@
           p {
             font-weight: 500;
             font-size: 16px;
+            display: flex;
+            flex-wrap: wrap;
 
             span {
               font-weight: 300;
